--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ header {
     color: white;
     padding: 20px;
     text-align: center;
+    max-width: 600px; /* Встановлюємо максимальну ширину */
+    margin: 0 auto; /* Центруємо */
+    border-radius: 10px; /* Додаємо закруглені краї */
 }
 
 header h1 {
