--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,21 @@ body {
     padding: 0;
     background-color: #f8f8f8;
     color: #/* Заголовок */
+}
+    /* Заголовок */
 header {
     background: #2c3e50;
     color: white;
-    padding: 30px 0; /* Збільшуємо висоту фону */
+    padding: 30px 0; /* Більше відступів */
     text-align: center;
-    max-width: 500px; /* Вужчий фон */
-    margin: 0 auto; /* Центруємо */
+    max-width: 300px; /* Вужчий фон */
+    margin: 0 auto; /* Центруємо фон */
     border-radius: 10px; /* Закруглені краї */
 }
 
 /* Логотип */
 .logo-container img {
-    max-width: 180px; /* Трохи більший логотип */
+    max-width: 200px; /* Трохи більший логотип */
     height: auto;
 }
 header h1 {
