--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,17 @@ body {
 header {
     background: #2c3e50;
     color: white;
-    padding: 30px 0; /* Більше відступів */
+    padding: 20px 0; /* Зменшуємо висоту */
     text-align: center;
-    max-width: 300px; /* Вужчий фон */
-    margin: 0 auto; /* Центруємо фон */
-    border-radius: 10px; /* Закруглені краї */
+    width: 100%; /* Розтягнути на всю ширину */
 }
-
-/* Логотип */
+    /* Логотип */
 .logo-container img {
-    max-width: 200px; /* Трохи більший логотип */
+    max-width: 220px; /* Робимо логотип більшим */
     height: auto;
+    display: block;
+    margin: 0 auto 10px; /* Центруємо і додаємо відступ до тексту */
 }
-header h1 {
-    margin: 0;
-    font-size: 28px;
-}
-
 header p {
     font-size: 16px;
 }
