--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,29 @@ body {
     background-color: #f8f8f8;
     color: #/* Заголовок */
 }
-    /* Заголовок */
+   /* Заголовок */
 header {
     background: #2c3e50;
     color: white;
-    padding: 20px 0; /* Зменшуємо висоту */
+    padding: 10px 0; /* Зменшуємо висоту ще більше */
     text-align: center;
-    width: 100%; /* Розтягнути на всю ширину */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-    /* Логотип */
+ /* Логотип */
 .logo-container img {
-    max-width: 220px; /* Робимо логотип більшим */
+    max-width: 220px; /* Логотип великий */
     height: auto;
     display: block;
-    margin: 0 auto 10px; /* Центруємо і додаємо відступ до тексту */
+    margin-bottom: 5px; /* Зменшуємо відступ до тексту */
+}
+.header-text {
+    font-size: 16px;
+    text-align: center;
+    margin-top: 0; /* Прибираємо зайві відступи */
+    padding: 5px 0; /* Мінімальний відступ для гарного вигляду */
 }
 header p {
     font-size: 16px;
